--- a/alpha/ddStyle.css
+++ b/alpha/ddStyle.css
@@ -11,18 +11,28 @@ body{
 .contain{
     margin: 0 auto;
     display: inline-block;
-    border: blue 2px solid;
+    border: #801515 2px solid;
     padding: 6px;
-    background: #88b2f7;
+    background: #669999;
+    border-radius: 5px;
+}
+
+.pageTitle{
+    font-size: 22px;
+    font-weight: bold;
+    padding: 6px 0;
+    color: white;
+    text-shadow: 0 0 1px #888;
 }
 
 .listItemCon{
-    border: 2px solid green;
+    border: 2px solid #A5C663;
     width: 340px;
     padding: 16px;
     user-select: none;
     margin: 4px 0;
     background: white;
+    border-radius: 4px;
 }
 
 .listItemCon:hover{
